force-app/main/default/objects/Discovery_Ek__c/Discovery_Ek__c.object-meta.xml
<CustomObject>
    <description>Created by : EK</description>
    <label>DiscoveryEK</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DiscoveriesEK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>