force-app/main/default/objects/Discovery_Ek__c/fields/Link_EK__c.field-meta.xml
<CustomField>
    <fullName>Link_EK__c</fullName>
    <description>This is the link to the resource that Apprentices found.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Link EK</label>
    <type>Url</type>
</CustomField>