force-app/main/default/objects/Discovery_Ek__c/fields/Notes_EK__c.field-meta.xml
<CustomField>
    <fullName>Notes_EK__c</fullName>
    <description>This field is for making free-form notes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes EK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>